--- a/WPF_MVVM/WPF_MVVM.csproj
+++ b/WPF_MVVM/WPF_MVVM.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
 </Project>
