--- a/WPF_MVVM/WPF_MVVM.csproj
+++ b/WPF_MVVM/WPF_MVVM.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WPF_MVVM_Web\WPF_MVVM_Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
